--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -31,5 +31,8 @@ jobs:
         run: |
           python tests/test_euclidia.py
 
-      - name
-
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: euclidia-test-results
+          path: euclidia_test_results.csv
