Update test schedule to 15:30 UTC

--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -2,7 +2,7 @@ name: Daily EuclidIA Test
 
 on:
   schedule:
-    - cron: '45 14 * * *' 
+    - cron: '30 15 * * *'  # 15:30 UTC = 17:30 Paris
   workflow_dispatch:
 
 jobs:
