--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -1,22 +1,28 @@
 name: Daily EuclidIA Test
+
 on:
   schedule:
-    - cron: '30 15 * * *'  # 15:30 UTC = 17:30 Paris
+    - cron: '0 2 * * *'  # 02:00 UTC = 04:00 Paris
   workflow_dispatch:
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run EuclidIA test suite
         env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
@@ -24,35 +30,9 @@ jobs:
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
         run: |
           python test_euclidia.py
+
       - name: Upload test results
         uses: actions/upload-artifact@v4
         with:
           name: euclidia-test-results
-          path: euclidia_test_results.csv
-          
-      - name: Commit CSV to `results` branch
-        if: success()
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Save the results file temporarily
-          mkdir -p /tmp/test_results
-          cp euclidia_test_results.csv /tmp/test_results/
-
-          # Remove it from working tree to avoid conflicts
-          rm euclidia_test_results.csv
-
-          # Checkout the results branch
-          git fetch origin results
-          git checkout results
-          git pull origin results
-
-          # Restore the file and commit
-          cp /tmp/test_results/euclidia_test_results.csv ./
-          git add euclidia_test_results.csv
-          git commit -m "Update test results CSV for $(date +%Y-%m-%d)"
-
-          # Configure push with GitHub token
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git push origin results
+          path: euclidia_test_results_*.csv
